Fix spacing in related articles

--- a/src/styles/components/_article-footer.scss
+++ b/src/styles/components/_article-footer.scss
@@ -16,6 +16,7 @@
     justify-content: space-between;
     flex-wrap: nowrap;
     align-items: flex-start;
+    margin-bottom: 32px;
 
     @include tablet {
       flex-direction: row;
